--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "apm.angular18",
+  "name": "procergs-apm-angular",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "test": "ng test",
+    "lint": "eslint . --ext .ts,.html",
+    "lint:fix": "eslint . --ext .ts,.html --fix"
   },
   "private": true,
   "dependencies": {
@@ -40,7 +42,10 @@
     "@angular/localize": "^18.2.0",
     "@briebug/jest-schematic": "^6.0.0",
     "@types/jest": "^29.5.12",
+    "angular-eslint": "18.3.1",
+    "eslint": "^9.9.1",
     "jest": "^29.7.0",
-    "typescript": "~5.5.2"
+    "typescript": "~5.5.2",
+    "typescript-eslint": "8.2.0"
   }
 }
