--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@ng-select/ng-select": "^13.7.1",
     "@popperjs/core": "^2.11.8",
     "@sweetalert2/ngx-sweetalert2": "^12.4.0",
+    "angular-auth-oidc-client": "^18.0.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
     "ng2-charts": "^4.1.1",
