--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,7 +26,7 @@ steps:
   displayName: Run ng build (des)
   inputs:
     command: 'custom'
-    customCommand: 'run ng build --configuration=des'
+    customCommand: 'ng build --configuration=des'
 
 - task: PublishBuildArtifacts@1
   displayName: 'Publish Artifact (profs02)'
