--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "bootstrap-icons": "^1.11.3",
     "ng2-charts": "^4.1.1",
     "ngx-bootstrap": "^18.0.2",
+    "ngx-mask": "^18.0.0",
     "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.1",
