--- a/angular.json
+++ b/angular.json
@@ -27,6 +27,7 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
+              "src/.htaccess",
               "src/assets"
             ],
             "styles": [
