--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ngx-bootstrap": "^18.0.2",
     "ngx-mask": "^18.0.0",
     "ngx-pagination": "^6.0.3",
+    "procergs-apm-angular": "file:",
     "rxjs": "~7.8.0",
     "sweetalert2": "^11.13.1",
     "tslib": "^2.3.0",
