--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "angular-auth-oidc-client": "^18.0.1",
     "bootstrap": "^5.3.2",
     "bootstrap-icons": "^1.11.3",
-    "ng2-charts": "^4.1.1",
+    "chart.js": "^4.4.4",
+    "ng2-charts": "^6.0.1",
     "ngx-bootstrap": "^18.0.2",
     "ngx-mask": "^18.0.0",
     "ngx-pagination": "^6.0.3",
