--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "angular-eslint": "18.3.1",
     "eslint": "^9.9.1",
     "jest": "^29.7.0",
+    "sonarqube-scanner": "^4.2.3",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.2.0"
   }
