--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -38,6 +38,10 @@ steps:
     command: 'custom'
     customCommand: 'run build:des'
 
+- task: SonarQubeAnalyze@6
+  inputs:
+    jdkversion: 'JAVA_HOME_17_X64'
+
 - task: SonarQubePublish@6
   inputs:
     pollingTimeoutSec: '300'
