feat: ajustando sonar projectkey

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.host.url=https://sonar-9x.pro.intra.rs.gov.br
-sonar.projectKey=org.sonarqube:com.procergs.apm-angular-aap
-sonar.projectName=APMAngular AAP
+sonar.projectKey=apm-angular-aap
+sonar.projectName=APM Angular AAP
 sonar.projectVersion=1.0
 sonar.sources=src
 sonar.tests=src
