Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,13 +23,13 @@ steps:
   inputs:
     command: 'install'
 
-- task: SonarQubePrepare@6
-  inputs:
-    SonarQube: 'sonar-apm-angular-aap'
-    scannerMode: 'CLI'
-    configMode: 'manual'
-    cliProjectKey: 'org.sonarqube:com.procergs.apm-angular-aap'
-    cliSources: '.'
+# - task: SonarQubePrepare@6
+#   inputs:
+#     SonarQube: 'sonar-apm-angular-aap'
+#     scannerMode: 'CLI'
+#     configMode: 'manual'
+#     cliProjectKey: 'org.sonarqube:com.procergs.apm-angular-aap'
+#     cliSources: '.'
 
 # Executa o build para o ambiente 'des'
 - task: Npm@1
@@ -38,13 +38,13 @@ steps:
     command: 'custom'
     customCommand: 'run build:des'
 
-- task: SonarQubeAnalyze@6
-  inputs:
-    jdkversion: 'JAVA_HOME_17_X64'
+# - task: SonarQubeAnalyze@6
+#   inputs:
+#     jdkversion: 'JAVA_HOME_17_X64'
 
-- task: SonarQubePublish@6
-  inputs:
-    pollingTimeoutSec: '300'
+# - task: SonarQubePublish@6
+#   inputs:
+#     pollingTimeoutSec: '300'
 
 # Publica os artefatos de build para o destino correto
 - task: PublishBuildArtifacts@1
