--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,19 +23,19 @@ steps:
   inputs:
     command: 'install'
 
-# - task: SonarQubePrepare@6
-#   inputs:
-#     SonarQube: 'sonar-apm-angular-aap'
-#     scannerMode: 'CLI'
-#     configMode: 'manual'
-#     cliProjectKey: 'org.sonarqube:com.procergs.apm-angular-aap'
-#     cliSources: '.'
-
-- task: CmdLine@2
-  displayName: 'Sonar Quality Gate'
+- task: SonarQubePrepare@6
   inputs:
-    script: |
-      sonar-scanner -Dsonar.projectKey=apm-angular-aap -Dsonar.sources=src
+    SonarQube: 'sonar-apm-angular-aap'
+    scannerMode: 'CLI'
+    configMode: 'manual'
+    cliProjectKey: 'org.sonarqube:com.procergs.apm-angular-aap'
+    cliSources: '.'
+
+# - task: CmdLine@2
+#   displayName: 'Sonar Quality Gate'
+#   inputs:
+#     script: |
+#       sonar-scanner -Dsonar.projectKey=apm-angular-aap -Dsonar.sources=src
 
 # Executa o build para o ambiente 'des'
 - task: Npm@1
@@ -43,14 +43,16 @@ steps:
   inputs:
     command: 'custom'
     customCommand: 'run build:des'
-
+- task: SonarQubeAnalyze@6
+  inputs:
+    jdkversion: 'JAVA_HOME'
 # - task: SonarQubeAnalyze@6
 #   inputs:
 #     jdkversion: 'JAVA_HOME_17_X64'
 
-# - task: SonarQubePublish@6
-#   inputs:
-#     pollingTimeoutSec: '300'
+- task: SonarQubePublish@6
+  inputs:
+    pollingTimeoutSec: '300'
 
 # Publica os artefatos de build para o destino correto
 - task: PublishBuildArtifacts@1
