Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -44,9 +44,9 @@ steps:
     command: 'custom'
     customCommand: 'run build:des'
 
-- task: SonarQubeAnalyze@6
-  inputs:
-    jdkversion: 'JAVA_HOME'
+# - task: SonarQubeAnalyze@6
+#   inputs:
+#     jdkversion: 'JAVA_HOME'
     
 # - task: SonarQubeAnalyze@6
 #   inputs:
