--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,6 +27,7 @@ steps:
 - task: Npm@1
   displayName: 'Run test coverage'
   inputs:
+    command: 'custom'
     customCommand: 'test -- --coverage'
 
 # Step 1: Download SonarScanner CLI for Windows
