--- a/package.json
+++ b/package.json
@@ -49,8 +49,10 @@
     "@briebug/jest-schematic": "^6.0.0",
     "@types/jest": "^29.5.12",
     "angular-eslint": "18.3.1",
+    "cypress": "^13.6.4",
     "eslint": "^9.9.1",
     "jest": "^29.7.0",
+    "mochawesome": "^7.1.3",
     "sonar-scanner": "^3.1.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.2.0"
