Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,12 +35,12 @@ steps:
     command: 'custom'
     customCommand: 'test -- --coverage'
 
-# Roda testes do Cypress
-- task: Npm@1
-  displayName: 'Run test cypress'
-  inputs:
-    command: 'custom'
-    customCommand: 'npm exec cypress run'
+# # Roda testes do Cypress
+# - task: Npm@1
+#   displayName: 'Run test cypress'
+#   inputs:
+#     command: 'custom'
+#     customCommand: 'npm exec cypress run'
 
 # Step 1: Download SonarScanner CLI for Windows
 - powershell: |
