--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build:des": "ng build --configuration=des",
     "test": "ng test",
     "lint": "eslint . --ext .ts,.html",
-    "lint:fix": "eslint . --ext .ts,.html --fix"
+    "lint:fix": "eslint . --ext .ts,.html --fix",
+    "cypress": "nyc --reporter=lcov --reporter=text npm run cypress:run"
   },
   "private": true,
   "dependencies": {
@@ -47,12 +48,14 @@
     "@angular/compiler-cli": "^18.2.0",
     "@angular/localize": "^18.2.0",
     "@briebug/jest-schematic": "^6.0.0",
+    "@cypress/code-coverage": "^3.13.5",
     "@types/jest": "^29.5.12",
     "angular-eslint": "18.3.1",
     "cypress": "^13.6.4",
     "eslint": "^9.9.1",
     "jest": "^29.7.0",
     "mochawesome": "^7.1.3",
+    "nyc": "^17.1.0",
     "sonar-scanner": "^3.1.0",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.2.0"
