Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,11 +36,11 @@ steps:
     customCommand: 'test -- --coverage'
 
 # # Roda testes do Cypress
-# - task: Npm@1
-#   displayName: 'Run test cypress'
-#   inputs:
-#     command: 'custom'
-#     customCommand: 'npm exec cypress run'
+- task: Npm@1
+  displayName: 'Run test cypress'
+  inputs:
+    command: 'custom'
+    customCommand: 'cypress'
 
 # Step 1: Download SonarScanner CLI for Windows
 - powershell: |
