Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,28 +29,28 @@ steps:
     }
   displayName: 'Set environmentName based on branch'
 
-- task: NodeTool@0
-  inputs:
-    versionSpec: '20.12.x'
-  displayName: 'Install Node.js'
+# - task: NodeTool@0
+#   inputs:
+#     versionSpec: '20.12.x'
+#   displayName: 'Install Node.js'
 
-# Instala as dependências do projeto
-- task: Npm@1
-  displayName: 'Npm Install'
-  inputs:
-    command: 'install'
+# # Instala as dependências do projeto
+# - task: Npm@1
+#   displayName: 'Npm Install'
+#   inputs:
+#     command: 'install'
 
 # # Cria um env local
 # - powershell: |
 #     echo '{ "organizacao": "PROCERGS", "matricula": "$(MATRICULA)", "senha": "$(SENHA)", "token": "Bearer" }' > cypress.env.json
 #   displayName: 'Reescreve exemplo.cypress.env.json'
 
-# Roda testes do Jest
-- task: Npm@1
-  displayName: 'Run test coverage Jest'
-  inputs:
-    command: 'custom'
-    customCommand: 'test -- --coverage'
+# # Roda testes do Jest
+# - task: Npm@1
+#   displayName: 'Run test coverage Jest'
+#   inputs:
+#     command: 'custom'
+#     customCommand: 'test -- --coverage'
 
 # # # Roda testes do Cypress
 # - task: Npm@1
