Update azure-pipelines-pull-request.yml for Azure Pipelines

--- a/azure-pipelines-pull-request.yml
+++ b/azure-pipelines-pull-request.yml
@@ -35,3 +35,11 @@ steps:
   inputs:
     command: 'custom'
     customCommand: 'test -- --coverage'
+
+
+# Executa o build
+- task: Npm@1
+  displayName: 'Run npm build'
+  inputs:
+    command: 'custom'
+    customCommand: 'run build'
