--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,16 +29,16 @@ steps:
     }
   displayName: 'Set environmentName based on branch'
 
-# - task: NodeTool@0
-#   inputs:
-#     versionSpec: '20.12.x'
-#   displayName: 'Install Node.js'
+- task: NodeTool@0
+  inputs:
+    versionSpec: '20.12.x'
+  displayName: 'Install Node.js'
 
-# # Instala as dependências do projeto
-# - task: Npm@1
-#   displayName: 'Npm Install'
-#   inputs:
-#     command: 'install'
+# Instala as dependências do projeto
+- task: Npm@1
+  displayName: 'Npm Install'
+  inputs:
+    command: 'install'
 
 # # Cria um env local
 # - powershell: |
