--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,13 +59,13 @@ steps:
 #     command: 'custom'
 #     customCommand: 'npm run cypress'
 
-# Step 1: Download SonarScanner CLI for Windows
-- powershell: |
-    Invoke-WebRequest -Uri https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-windows.zip -OutFile sonar-scanner-cli-windows.zip
-    Expand-Archive -Path sonar-scanner-cli-windows.zip -DestinationPath .
-    $env:PATH = "$(System.DefaultWorkingDirectory)\sonar-scanner-4.7.0.2747-windows\bin;$env:PATH"
-    echo "##vso[task.setvariable variable=PATH]$env:PATH"
-  displayName: 'Download and extract SonarScanner CLI for Windows'
+# # Step 1: Download SonarScanner CLI for Windows
+# - powershell: |
+#     Invoke-WebRequest -Uri https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-windows.zip -OutFile sonar-scanner-cli-windows.zip
+#     Expand-Archive -Path sonar-scanner-cli-windows.zip -DestinationPath .
+#     $env:PATH = "$(System.DefaultWorkingDirectory)\sonar-scanner-4.7.0.2747-windows\bin;$env:PATH"
+#     echo "##vso[task.setvariable variable=PATH]$env:PATH"
+#   displayName: 'Download and extract SonarScanner CLI for Windows'
 
 # #Step 3: Run  Sonar
 # - script: |
